package org.lms.factory;

import org.lms.model.Book;
import org.lms.model.Patron;

/** Simple factory for creating domain objects. */
public final class LibraryFactory {
    private LibraryFactory() { }

    public static Book createBook(String isbn, String title, String author, int year) {
        return new Book(isbn, title, author, year);
    }

    public static Patron createPatron(String id, String name, String email) {
        return new Patron(id, name, email);
    }
}
